site: add upload.txt to upload arbitrary files (#1120)