@@ -50,7 +50,6 @@ import java.nio.file.Paths;
 import java.nio.file.attribute.FileTime;
 import java.time.Instant;
 import java.util.*;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -60,6 +59,7 @@ import static org.testingisdocumenting.znai.website.ProgressReporter.reportPhase
 import static java.util.stream.Collectors.toList;
 
 public class WebSite implements Log {
+    private static final String UPLOAD_FILE_NAME = "upload.txt";
     private static final String SEARCH_INDEX_FILE_NAME = "search-index.js";
     private final PluginParamsWithDefaultsFactory pluginParamsFactory;
 
@@ -102,7 +102,7 @@ public class WebSite implements Log {
 
     private WebSite(Configuration siteConfig) {
         cfg = siteConfig;
-        deployer = new Deployer(siteConfig.deployPath);
+        deployer = new Deployer(siteConfig.docRootPath, siteConfig.deployPath);
         docMeta = siteConfig.docMeta;
         pageModifiedTimeStrategy = siteConfig.pageModifiedTimeStrategy != null ?
                 siteConfig.pageModifiedTimeStrategy : new FileBasedPageModifiedTime();
@@ -201,6 +201,7 @@ public class WebSite implements Log {
         deployGlobalAssets();
         deployGlobalDocReferences();
         deployAuxiliaryFiles();
+        deployUploadFiles();
         deployResources();
         deployPluginsStats();
     }
@@ -389,7 +390,7 @@ public class WebSite implements Log {
         resourceResolver.addResolver(new ClassPathResourceResolver());
         resourceResolver.addResolver(new HttpBasedResourceResolver());
 
-        List<String> lookupLocations = findLookupLocations(cfg).collect(toList());
+        List<String> lookupLocations = findLookupLocations(cfg).toList();
         printLookupLocations(lookupLocations.stream());
         resourceResolver.initialize(lookupLocations.stream());
     }
@@ -464,7 +465,7 @@ public class WebSite implements Log {
         reportPhase("validate TOC items presence");
         List<TocItem> missingTocItems = toc.getTocItems().stream()
                 .filter(this::isTocItemMissing)
-                .collect(toList());
+                .toList();
 
         if (!missingTocItems.isEmpty()) {
             String renderedMissingTocItems = "    " + missingTocItems.stream()
@@ -724,6 +725,21 @@ public class WebSite implements Log {
         auxiliaryFilesRegistry.getAuxiliaryFilesForDeployment().forEach(this::deployAuxiliaryFile);
     }
 
+    private void deployUploadFiles() {
+        reportPhase("deploying files from " + UPLOAD_FILE_NAME);
+
+        Path uploadTxtPath = cfg.getDocRootPath().resolve(UPLOAD_FILE_NAME);
+        if (!Files.exists(uploadTxtPath)) {
+            return;
+        }
+
+        String fileNames = fileTextContent(uploadTxtPath);
+        String[] names = fileNames.split("\n");
+        Arrays.stream(names)
+                .map(String::trim)
+                .forEach(deployer::deploy);
+    }
+
     private void deployAuxiliaryFileIfOutdated(AuxiliaryFile auxiliaryFile) {
         Long savedLastModifiedTime = auxiliaryFilesLastUpdateTime.get(auxiliaryFile);
 
@@ -759,12 +775,6 @@ public class WebSite implements Log {
             Page page = pageByTocItem.get(tocItem);
             consumer.consume(tocItem, page);
         });
-    }
-
-    private <E> Stream<E> mapEachTocItemWithoutPage(Function<TocItem, E> func) {
-        return toc.getTocItems().stream()
-                .filter(tocItem -> pageByTocItem.containsKey(tocItem))
-                .map(func);
     }
 
     private void validateCollectedLinks() {
@@ -900,7 +910,6 @@ public class WebSite implements Log {
         private String title;
         private String type;
         private String fileWithLookupPaths;
-        private String logoRelativePath;
         private final List<WebResource> registeredExtraJavaScripts;
         private boolean isPreviewEnabled;
         private boolean isValidateExternalLinks;
@@ -997,11 +1006,6 @@ public class WebSite implements Log {
             withTitle(docMeta.getTitle());
             withType(docMeta.getType());
 
-            return this;
-        }
-
-        public Configuration withLogoRelativePath(String logoRelativePath) {
-            this.logoRelativePath = logoRelativePath;
             return this;
         }
 
